# penguin-downloader-tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  config.rs  credential.rs  logging.rs  login_util.rs  main.rs  qr_renderer.rs
src/pages/: album_search.rs  download.rs  home.rs  login.rs  mod.rs  playlist.rs  search.rs  settings.rs
